@@ -1,0 +1,10 @@
+#ifndef AUTOBUILD_H
+#define AUTOBUILD_H
+// change the FALSE to TRUE for autoincrement of build number
+#define INCREMENT_VERSION TRUE
+#define FILEVER        0,2,7,26
+#define PRODUCTVER     0,2,7,124
+#define STRFILEVER     "0.2.7.26"
+#define STRPRODUCTVER  "0.2.7.124"
+#define STRPRODUCTDATE  "2007-10-06"
+#endif // AUTOBUILD_H
