@@ -8,6 +8,10 @@ TODO:
  * Fix PDH problems
  * Add API for rehashing the daemon (or implement it the API is there but does nothing)
 
+2007-10-06 MickeM
+ + Added auto-upda-te of versions and dates on build to make versions better updated.
+ + Fixed x64 build and cleanup a bit.
+
 2007-09-15 MickeM
  + Added better error messages (now returncodes are displayed as text). Not implemented all over yet but the infrastructure is there.
 
